Fix whitespace wrap for config options in table cells

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -7,3 +7,7 @@
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
+
+td > code:only-child {
+  white-space: nowrap;
+}
